--- a/lab_4/index.html
+++ b/lab_4/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <button id="theme-toggle" title="Змінити тему">🌓</button>
+    <button id="open-feedback" title="Відкрити форму">✉️</button>
     <main id="cv-container">
            <div class="left-column">
             <header >
@@ -85,5 +86,18 @@
             </section>
         </div>
     </main>
+    <footer id="browser-info" style="text-align: center; padding: 1rem; font-size: 0.8rem;">
+        <!-- Тут відобразиться інформація -->
+    </footer>
+    <div id="feedback-modal" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 0 20px rgba(0,0,0,0.2);">
+        <form action="https://formspree.io/f/xwponror" method="POST">
+            <input type="text" name="name" placeholder="Ім'я" required><br>
+            <input type="email" name="email" placeholder="Email" required><br>
+            <input type="tel" name="phone" placeholder="Телефон"><br>
+            <textarea name="message" placeholder="Повідомлення" required></textarea><br>
+            <button type="submit">Відправити</button>
+            <button type="button" onclick="document.getElementById('feedback-modal').style.display='none'">Скасувати</button>
+        </form>
+    </div>
 </body>
 </html>
