simple interactive contacts

--- a/lab_4/index.html
+++ b/lab_4/index.html
@@ -31,10 +31,10 @@
 
             <section id="contact">
                 <h2 class="section-header">Contact</h2>
-                <div class="contact-info">
+                <div class="contact-info ">
                     <p>
-                        +380 987 440 844<br>
-                        antonkit135@gmail.com<br>
+                         <a href="tel:+380987440844" style="text-decoration: none; color: white">+380 987 440 844</a><br>
+                        <a href="mailto:antonkit135@gmail.com" style="text-decoration: none; color: white">antonkit135@gmail.com</a></a><br>
                         Львів, вул. Городоцька, 274
                     </p>
                 </div>
