From text area fix

--- a/lab_4/index.html
+++ b/lab_4/index.html
@@ -108,7 +108,7 @@
             <input type="text" name="name" placeholder="Ім'я" required><br>
             <input type="email" name="email" placeholder="Email" required><br>
             <input type="tel" name="phone" placeholder="Телефон"><br>
-            <textarea name="message" placeholder="Повідомлення" required></textarea><br>
+            <textarea name="message" placeholder="Повідомлення" required style="resize: none; height: 5rem;"></textarea><br>
             <button type="submit">Відправити</button>
             <button type="button" onclick="document.getElementById('feedback-modal').style.display='none'">Скасувати</button>
         </form>
