btn print removed

--- a/lab_4/index.html
+++ b/lab_4/index.html
@@ -13,7 +13,7 @@
     <button class="fixed-button"id="theme-toggle" title="Змінити тему">🌓</button>
     <button class="fixed-button"id="open-feedback" title="Відкрити форму">✉️</button>
     <button class="fixed-button"id="export-pdf" title="Експорт в PDF">📄</button>
-    <button class="fixed-button"id="print-cv" title="Друкувати CV">🖨️</button>
+    <!-- <button class="fixed-button"id="print-cv" title="Друкувати CV">🖨️</button> -->
     <main id="cv-container">
            <div class="left-column">
             <header >
