--- a/lab_4/index.html
+++ b/lab_4/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My - CV</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
@@ -36,9 +35,10 @@
                 <h2 class="section-header">Contact</h2>
                 <div class="contact-info ">
                     <p>
-                         <a href="tel:+380987440844" style="text-decoration: none; color: white">+380 987 440 844</a><br>
-                        <a href="mailto:antonkit135@gmail.com" style="text-decoration: none; color: white">antonkit135@gmail.com</a></a><br>
-                        Львів, вул. Городоцька, 274
+                        <a href="tel:+380987440844" style="text-decoration: none; color: white">📱 +380 987 440 844</a><br>
+                        <a href="mailto:antonkit135@gmail.com" style="text-decoration: none; color: white">📧 antonkit135@gmail.com</a><br>
+                        <a href="https://check-out-me.vercel.app/" target="_blank" style="text-decoration: none; color: white">🌐 check-out-me.vercel.app</a><br>
+                        📍 Львів, вул. Городоцька, 274
                     </p>
                 </div>
             </section>
@@ -46,10 +46,10 @@
             <section id="skills">
                 <h2 class="section-header">Skills</h2>
                 <ul class="skills-list">
-                    <li>Front-end (basic)</li>
-                    <li>Programming</li>
-                    <li>Ethical Hacking</li>
-                    <li>Networking (basic)</li>
+                    <li> Front-end (basic)</li>
+                    <li> Programming</li>
+                    <li> Ethical Hacking</li>
+                    <li> Networking (basic)</li>
                 </ul>
             </section>
 
@@ -74,7 +74,7 @@
                 <h2 class="section-header">Experience</h2>
                 <ul class="experience-list">
                     <li class="experience-item">
-                        В даний час працюю на проєктом котрий повинен моніторити, через використання API, дві торгові площадки з товарами, 
+                        Робота над проєктом котрий повинен моніторити, через використання API, дві торгові площадки з товарами, 
                         нормалізовувати їхні назви, заносити в базу даних (SQLite). Та аналіз товарів буде вібравлятся в телеграм.
                     </li>
                     <li class="experience-item">
